Added vels details

--- a/vision-mission.html
+++ b/vision-mission.html
@@ -23,7 +23,7 @@
                             <li><a href="index.html" class="sidebar-link">AICTE IDEA LAB - OBJECTIVE</a></li>
                             <li><a href="vision-mission.html" class="sidebar-link active">Vision & Mission</a></li>
                             <li><a href="coordinators.html" class="sidebar-link">Coordinators</a></li>
-                            <li><a href="tech-gurus.html" class="sidebar-link">Tech Gurus & Student Ambassadors</a></li>
+                            <li><a href="tech-gurus.html" class="sidebar-link">Faculty Coordinators & Student Ambassadors</a></li>
                             <li><a href="major-equipment.html" class="sidebar-link">Major Equipment</a></li>
                             <li><a href="events.html" class="sidebar-link">Events</a></li>
                             <li><a href="gallery.html" class="sidebar-link">Gallery</a></li>
@@ -35,7 +35,7 @@
                 <!-- Main Content Area -->
                 <section class="content-area">
                     <div class="page-header">
-                        <h1>AICTE IDEA LAB</h1>
+                        <h1>AICTE IDEA LAB @ VISTAS</h1>
                         <h2>VISION & MISSION</h2>
                     </div>
 
@@ -47,24 +47,25 @@
                                     <h3>VISION</h3>
                                 </div>
                                 <div class="card-content">
-                                    <p>To establish a world-class innovation ecosystem that empowers students, faculty, and industry partners to transform creative ideas into impactful technological solutions, fostering entrepreneurship and driving societal advancement through cutting-edge research and development.</p>
+                                    <ul>
+                                        <li style="list-style-type: numeric">To achieve excellence in product creation and innovation, resulting in start-ups by developing passionate entrepreneurs.</li>
+                                        <li style="list-style-type: numeric">To prepare the next generation of young brains to turn their unique ideas into profitable products.</li>
+                                        <li style="list-style-type: numeric">To support effective lab utilization in rural and urban areas near the institution.</li>
+                                      </ul>
                                 </div>
                             </div>
 
                             <div class="mission-card">
                                 <div class="card-header">
-                                    <i class="fas fa-target"></i>
-                                    <h3>MISSION</h3>
+                                    <i class="fas fa-eye"></i>
+                                    <h3>Integration of IDEA Lab with Existing Facilites</h3>
                                 </div>
                                 <div class="card-content">
-                                    <h4>Our mission is to:</h4>
                                     <ul class="mission-list">
-                                        <li><strong>Cultivate Innovation:</strong> Provide state-of-the-art facilities and resources to nurture creative thinking and innovative problem-solving capabilities among students and faculty.</li>
-                                        <li><strong>Bridge Academia-Industry Gap:</strong> Foster collaborative partnerships with industry leaders to ensure practical relevance and real-world application of academic research.</li>
-                                        <li><strong>Develop Future Leaders:</strong> Equip students with 21st-century skills including critical thinking, design thinking, and entrepreneurial mindset to become technology leaders.</li>
-                                        <li><strong>Promote Entrepreneurship:</strong> Support the development of innovative ideas into viable business ventures through mentorship, resources, and strategic guidance.</li>
-                                        <li><strong>Enable Continuous Learning:</strong> Create an environment of lifelong learning where students, faculty, and industry professionals can continuously update their skills and knowledge.</li>
-                                        <li><strong>Drive Social Impact:</strong> Focus on developing solutions that address real-world challenges and contribute to societal welfare and sustainable development.</li>
+                                        <li style="list-style-type: circle;"><strong>Product Deployment in Existing Infrastructure:</strong> Provide state-of-the-art facilities and resources to nurture creative thinking and innovative problem-solving capabilities among students and faculty.</li>
+                                        <li style="list-style-type: circle;"><strong>Knowledge and Expertise Sharing:</strong> Foster collaborative partnerships with industry leaders to ensure practical relevance and real-world application of academic research.</li>
+                                        <li style="list-style-type: circle;"><strong>Collaboration with Fabrication Lab:</strong> Equip students with 21st-century skills including critical thinking, design thinking, and entrepreneurial mindset to become technology leaders.</li>
+                                        <li style="list-style-type: circle;"><strong>Youth Empowerment Through Access:</strong> Support the development of innovative ideas into viable business ventures through mentorship, resources, and strategic guidance.</li>
                                     </ul>
                                 </div>
                             </div>
@@ -77,29 +78,29 @@
                                     <div class="objective-icon">
                                         <i class="fas fa-lightbulb"></i>
                                     </div>
-                                    <h4>Innovation Hub</h4>
-                                    <p>Create a vibrant ecosystem for innovation where ideas are generated, nurtured, and transformed into functional prototypes.</p>
+                                    <h4>Foster Innovation and Creative Thinking</h4>
+                                    <p>To cultivate a culture of innovation by encouraging students and faculty to explore, experiment, and develop original solutions through hands-on projects and interdisciplinary collaboration.</p>
                                 </div>
                                 <div class="objective-item">
                                     <div class="objective-icon">
                                         <i class="fas fa-users"></i>
                                     </div>
-                                    <h4>Collaborative Learning</h4>
-                                    <p>Foster collaborative learning environments where students work together on interdisciplinary projects and challenges.</p>
+                                    <h4>Strengthen Industry-Academia Collaboration</h4>
+                                    <p>To bridge the gap between academic knowledge and industrial needs by providing real-world exposure, problem-solving opportunities, and joint project development with industry partners.</p>
                                 </div>
                                 <div class="objective-item">
                                     <div class="objective-icon">
                                         <i class="fas fa-rocket"></i>
                                     </div>
-                                    <h4>Startup Incubation</h4>
-                                    <p>Support promising ideas through our incubation programs, providing mentorship and resources for startup development.</p>
+                                    <h4>Enable Skill Development and Entrepreneurship</h4>
+                                    <p>To empower students with 21st-century skills such as critical thinking, design thinking, prototyping, and entrepreneurship—preparing them to launch start-ups or thrive in a competitive workforce.</p>
                                 </div>
                                 <div class="objective-item">
                                     <div class="objective-icon">
                                         <i class="fas fa-globe"></i>
                                     </div>
-                                    <h4>Global Impact</h4>
-                                    <p>Develop solutions that have global relevance and can make a meaningful impact on society and the environment.</p>
+                                    <h4>Promote Inclusive and Sustainable Technological Growth</h4>
+                                    <p>To extend IDEA Lab access and benefits to rural and urban communities, ensuring equitable participation and driving innovation that addresses local and global societal challenges.</p>
                                 </div>
                             </div>
                         </div>
