--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             <li><a href="index.html" class="sidebar-link active">AICTE IDEA LAB - OBJECTIVE</a></li>
                             <li><a href="vision-mission.html" class="sidebar-link">Vision & Mission</a></li>
                             <li><a href="coordinators.html" class="sidebar-link">Coordinators</a></li>
-                            <li><a href="tech-gurus.html" class="sidebar-link">Tech Gurus & Student Ambassadors</a></li>
+                            <li><a href="tech-gurus.html" class="sidebar-link">Faculty Coordinators & Student Ambassadors</a></li>
                             <li><a href="major-equipment.html" class="sidebar-link">Major Equipment</a></li>
                             <li><a href="events.html" class="sidebar-link">Events</a></li>
                             <li><a href="gallery.html" class="sidebar-link">Gallery</a></li>
@@ -36,33 +36,29 @@
                 <!-- Main Content Area -->
                 <section class="content-area">
                     <div class="page-header">
-                        <h1>AICTE IDEA LAB</h1>
+                        <h1 class="mt-5">AICTE IDEA LAB @ VISTAS</h1>
                         <h2>OBJECTIVE</h2>
                     </div>
 
                     <div class="content-section">
                         <p class="intro-text">
-                            The AICTE-IDEA Lab is dedicated to fostering a dynamic ecosystem that promotes innovation, nurtures creativity, and advances technological progress in both education and society. Recently, VTHT has been sanctioned with fund of ₹90 lakhs by AICTE, New Delhi, to establish this state-of-the-art facility. The primary objective of the IDEA Lab is to transform innovative ideas into functional prototypes, which can subsequently be developed into market-ready products through startup ventures.
+                            The AICTE-sponsored laboratory at our institution is a cutting-edge facility established to nurture innovation, research, and practical learning. Equipped with state-of-the-art technology and guided by expert faculty, the lab provides students with hands-on experience in emerging fields such as Artificial Intelligence, IoT, Robotics, and more. This initiative supports the vision of AICTE to bridge the gap between industry and academia, empowering students to become future-ready professionals.
                         </p>
 
                         <div class="features-section">
-                            <h3>KEY FEATURES:</h3>
+                            <h3>Benefits to students (UG/PG/Projects/Internship) and staff (FDP/Projects) to be mentioned quantitatively:</h3>
                             <div class="features-grid">
                                 <div class="feature-item">
-                                    <h4><i class="fas fa-building"></i> Common Facility:</h4>
-                                    <p>IDEA Lab is designed as common facility within our institute, accessible to all students, faculty, and nearby Industries.</p>
+                                    <h4><i class="fas fa-building"></i> Advanced Lab Infrastructure</h4>
                                 </div>
                                 <div class="feature-item">
-                                    <h4><i class="fas fa-clock"></i> 24/7 Availability:</h4>
-                                    <p>The IDEA lab is intended to be available 24/7 for students to use.</p>
+                                    <h4><i class="fas fa-clock"></i> Training and Mentorship</h4>
                                 </div>
                                 <div class="feature-item">
-                                    <h4><i class="fas fa-tools"></i> Equipped with Resources:</h4>
-                                    <p>IDEA Lab provides a range of sophisticated equipment and tools, including 3D printers, 3D scanners, Drones, AR/VR equipments, Embedded Edge devices with varieties of sensors, AI Edge devices, IoT kits, CNC laser cutters, and computer workstations.</p>
+                                    <h4><i class="fas fa-tools"></i> Skill Development</h4>
                                 </div>
                                 <div class="feature-item">
-                                    <h4><i class="fas fa-handshake"></i> Industry Collaboration:</h4>
-                                    <p>IDEA Lab collaborates with nearby industries to leverage their resources and expertise, fostering a symbiotic relationship between academia and industry.</p>
+                                    <h4><i class="fas fa-handshake"></i> Entrepreneurship & Innovation</h4>
                                 </div>
                             </div>
                         </div>
@@ -71,40 +67,21 @@
                             <h3>Benefits</h3>
                             <div class="benefits-list">
                                 <div class="benefit-item">
-                                    <span class="benefit-number">1</span>
-                                    <p>IDEA Lab will be <strong>open to students & Staff for 24 hours</strong> from Monday to Saturday and 9.00 a.m. to 9.00 p.m. on Sundays.</p>
+                                    <span class="benefit-number">1. Modern Technological Environment</span>
+                                    <p>The AICTE IDEA Lab is equipped with state-of-the-art hardware and software tools designed to support a wide range of technical and interdisciplinary projects. From prototyping to real-time simulations, the lab offers students and faculty access to modern equipment, workstations, and collaborative tools that enhance the overall learning and research experience. This infrastructure creates a professional environment that mirrors industry standards, encouraging innovation and practical skill development.</p>
                                 </div>
                                 <div class="benefit-item">
-                                    <span class="benefit-number">2</span>
-                                    <p><strong>FDP</strong> (3/year), <strong>Bootcamp</strong> (3/year), <strong>Ideation Workshops</strong>(3/year), <strong>Annual Conference / Symposium</strong> (1/year), <strong>Technical skill development workshops</strong> for school students & Polytechnique students (6/year), <strong>School Teachers Awareness Programs</strong> (2/year), <strong>Open Day for School students</strong>(1/year) and <strong>Hands on skill training programs</strong>(4/year) will be <strong>organized by IDEA Lab</strong> for the benefits of Faculty, Engineering Students, Polytechnique Students and School Students to inculcate domain specific knowledge, innovative Idea, design and coding skills. The IDEA Lab also allows faculty and students to participate in similar events organized by other IDEA Lab.</p>
+                                    <span class="benefit-number">2. Comprehensive Learning Support</span>
+                                    <p>The lab offers continuous training programs, hands-on workshops, and mentorship sessions led by experienced faculty and industry professionals. These initiatives aim to bridge the gap between theoretical knowledge and real-world application. Students receive guidance on using advanced tools, managing projects, and exploring career paths, while faculty benefit from development programs and collaborative research opportunities. This mentorship ecosystem ensures that learners at all levels gain the confidence and competence to excel in their fields.
+                                    </p>
                                 </div>
                                 <div class="benefit-item">
-                                    <span class="benefit-number">3</span>
-                                    <p>Provide <strong>In-Plant Training, Internships</strong> (for a period of 1-6 Months) and arrange <strong>Industrial Visits</strong> to the students.</p>
+                                    <span class="benefit-number">3. Core Competency Enhancement</span>
+                                    <p>A major focus of the IDEA Lab is to cultivate essential cognitive and technical skills among students. Through guided experimentation, interdisciplinary projects, and problem-based learning, students are encouraged to enhance their analytical thinking, critical reasoning, and innovative problem-solving abilities. The lab serves as a testing ground for ideas and solutions, preparing students not only for academic excellence but also for dynamic careers in technology, research, and entrepreneurship.</p>
                                 </div>
                                 <div class="benefit-item">
-                                    <span class="benefit-number">4</span>
-                                    <p>The IDEA Lab <strong>joint hands with expert from collaborated Industry partners</strong> to provide technical support to students towards development of Proof of Concept(POC), development of Functional Prototype, preparation for various innovative idea contests and apply for National & State Level Students Project Grants.</p>
-                                </div>
-                                <div class="benefit-item">
-                                    <span class="benefit-number">5</span>
-                                    <p>The <strong>IDEA Lab provide adequate quantity of equipment, tools, Embedded development boards</strong> (such as Raspberry PI 5, NVIDIA Jetson Nano boards, STM 32 and NXP) <strong>and consumables</strong> to develop a solution for a problem and transform an Idea in to Prototype development.</p>
-                                </div>
-                                <div class="benefit-item">
-                                    <span class="benefit-number">6</span>
-                                    <p>The <strong>employability skills of a student will be significantly improved</strong> as per the requirements of industry by <strong>imparting 21st century skills</strong> (like critical thinking, problem solving, design thinking, ideation, collaboration, communication, lifelong learning, Project based Experiential Learning, etc.).</p>
-                                </div>
-                                <div class="benefit-item">
-                                    <span class="benefit-number">7</span>
-                                    <p>IDEA Lab gives students time and space <strong>to explore and leverage innovation ecosystems to gain an innovation-driven entrepreneurial advantage, and to build a stronger culture of innovation</strong>.</p>
-                                </div>
-                                <div class="benefit-item">
-                                    <span class="benefit-number">8</span>
-                                    <p>IDEA Lab support students <strong>to generate, develop and commercialize their own innovative ideas through entrepreneurship and/or open innovation</strong>.</p>
-                                </div>
-                                <div class="benefit-item">
-                                    <span class="benefit-number">9</span>
-                                    <p>IDEA Lab will provide <strong>conducive learning environments for students to work individually or collaboratively on entrepreneurial, STEM, STEAM, and Design Thinking projects</strong>.</p>
+                                    <span class="benefit-number">4. Innovation-Driven Entrepreneurship</span>
+                                    <p>The IDEA Lab is more than just a technical space—it is a launchpad for entrepreneurship and creative innovation. By fostering a culture of curiosity and experimentation, the lab motivates students to think beyond conventional solutions and explore their entrepreneurial potential. With support for prototype development, idea validation, and community engagement, the lab empowers students and faculty to drive positive change within the institution and the surrounding ecosystem.</p>
                                 </div>
                             </div>
                         </div>
