--- a/coordinators.html
+++ b/coordinators.html
@@ -26,12 +26,11 @@
                         <ul class="sidebar-menu">
                             <li><a href="index.html" class="sidebar-link">AICTE IDEA LAB - OBJECTIVE</a></li>
                             <li><a href="vision-mission.html" class="sidebar-link">Vision & Mission</a></li>
-                            <li><a href="coordinators.html" class="sidebar-link active">Coordinators</a></li>
-                            <li><a href="tech-gurus.html" class="sidebar-link">Faculty & Student Ambassadors</a></li>
-                            <li><a href="major-equipment.html" class="sidebar-link">Major Equipment</a></li>
+                            <li><a href="coordinators.html" class="sidebar-link">Coordinators</a></li>
+                            <li><a href="tech-gurus.html" class="sidebar-link">Faculty Coordinators & Student Ambassadors</a></li>
+                            <li><a href="members.html" class="sidebar-link">Student Members</a></li>
+                            <li><a class="sidebar-link">Major Equipment</a></li>
                             <li><a href="events.html" class="sidebar-link">Events</a></li>
-                            <li><a href="gallery.html" class="sidebar-link">Gallery</a></li>
-                            <li><a href="contact.html" class="sidebar-link">Contact Us</a></li>
                         </ul>
                     </nav>
                 </aside>
