--- a/coordinators.html
+++ b/coordinators.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coordinators - AICTE IDEA LAB | Vel Tech High Tech</title>
+    <title>Coordinators - AICTE IDEA LAB</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -47,7 +47,7 @@
                             <div class="coordinators-grid">
                                 <div class="coordinator-card">
                                     <div class="coordinator-image">
-                                        <i class="fas fa-user-circle"></i>
+                                        <img src="assets/chandrasekar.jpg" alt="Dr. Chandra Sekran" class="coordinator-photo" />
                                     </div>
                                     <div class="coordinator-info">
                                         <h3>Dr. Chandra Sekran</h3>
@@ -58,10 +58,10 @@
 
                                 <div class="coordinator-card">
                                     <div class="coordinator-image">
-                                        <i class="fas fa-user-circle"></i>
+                                        <img src="assets/anandan.png" alt="Dr. Chandra Sekran" class="coordinator-photo" />
                                     </div>
                                     <div class="coordinator-info">
-                                        <h3>Dr. Rajendran</h3>
+                                        <h3>Dr. Anandan R</h3>
                                         <p class="designation">Coordinator</p>
                                         <p class="department">Department of Computer Science & Engineering</p>
                                     </div>
@@ -70,10 +70,10 @@
                     
                                     <div class="coordinator-card center-card">
                                         <div class="coordinator-image">
-                                            <i class="fas fa-user-circle"></i>
+                                            <img src="assets/murali.jpg" alt="Dr. Muraliraja R" class="coordinator-photo" />
                                         </div>
                                         <div class="coordinator-info">
-                                            <h3>Dr. Rajaraman</h3>
+                                            <h3>Dr. Muraliraja R</h3>
                                             <p class="designation">Coordinator</p>
                                             <p class="department">Department of Mechanical engineering</p>
                                         </div>
