--- a/tech-gurus.html
+++ b/tech-gurus.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Faculty Coordinators & Student Ambassadors - AICTE IDEA LAB | Vel Tech High Tech</title>
+    <title>Faculty Coordinators & Student Ambassadors - AICTE IDEA LAB</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -23,7 +23,7 @@
                             <li><a href="index.html" class="sidebar-link">AICTE IDEA LAB - OBJECTIVE</a></li>
                             <li><a href="vision-mission.html" class="sidebar-link">Vision & Mission</a></li>
                             <li><a href="coordinators.html" class="sidebar-link">Coordinators</a></li>
-                            <li><a href="tech-gurus.html" class="sidebar-link">Faculty Coordinators & Student Ambassadors</a></li>
+                            <li><a href="tech-gurus.html" class="sidebar-link active">Faculty Coordinators & Student Ambassadors</a></li>
                             <li><a href="members.html" class="sidebar-link">Student Members</a></li>
                             <li><a class="sidebar-link">Major Equipment</a></li>
                             <li><a href="events.html" class="sidebar-link">Events</a></li>
@@ -46,10 +46,22 @@
                             <div class="tech-gurus-grid">
                                 <div class="tech-guru-card">
                                     <div class="guru-image">
-                                        <i class="fas fa-user-tie"></i>
+                                        <img src="assets/murali.jpg" alt="Dr. Muraliraja R" class="coordinator-photo" />
                                     </div>
                                     <div class="guru-info">
-                                        <h4>Mr. Baskar S</h4>
+                                        <h4>Dr. Muraliraja R</h4>
+                                        <div class="specialization">
+                                            <strong>Department:</strong> Mechanical Engineering
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="tech-guru-card">
+                                    <div class="guru-image">
+                                        <img src="assets/shai.jpg" alt="Dr. Shaisundaram VS" class="coordinator-photo" />
+                                    </div>
+                                    <div class="guru-info">
+                                        <h4>Dr. Shaisundaram VS</h4>
                                         <div class="specialization">
                                             <strong>Department:</strong> Automobile Engineering
                                         </div>
@@ -58,19 +70,7 @@
 
                                 <div class="tech-guru-card">
                                     <div class="guru-image">
-                                        <i class="fas fa-user-tie"></i>
-                                    </div>
-                                    <div class="guru-info">
-                                        <h4>Dr. Padma Ramu</h4>
-                                        <div class="specialization">
-                                            <strong>Department:</strong> Computer Science and Information Technology
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="tech-guru-card">
-                                    <div class="guru-image">
-                                        <i class="fas fa-user-tie"></i>
+                                        <img src="assets/sharmilaa.jpg" alt="Dr. Sharmilaa Ganesan" class="coordinator-photo" />
                                     </div>
                                     <div class="guru-info">
                                         <h4>Dr. Sharmilaa Ganesan</h4>
@@ -82,23 +82,12 @@
 
                                 <div class="tech-guru-card">
                                     <div class="guru-image">
-                                        <i class="fas fa-user-tie"></i>
+                                        <img src="assets/vinod.jpg" alt="Dr. Vinod Kumar" class="coordinator-photo" />
                                     </div>
                                     <div class="guru-info">
                                         <h4>Dr. Vinod Kumar</h4>
                                         <div class="specialization">
                                             <strong>Department:</strong> Mechanical Engineering
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="tech-guru-card center-card">
-                                    <div class="guru-image">
-                                        <i class="fas fa-user-tie"></i>
-                                    </div>
-                                    <div class="guru-info">
-                                        <h4>Dr. Shaisundaram VS</h4>
-                                        <div class="specialization">
-                                            <strong>Department:</strong> Automobile Engineering
                                         </div>
                                     </div>
                                 </div>
@@ -112,10 +101,10 @@
                             <div class="tech-gurus-grid">
                                 <div class="tech-guru-card">
                                     <div class="guru-image">
-                                        <i class="fas fa-user-tie"></i>
+                                        <img src="assets/rahul.jpg" alt="Rahul DK" class="coordinator-photo" />
                                     </div>
                                     <div class="guru-info">
-                                        <h4> Rahul DK</h4>
+                                        <h4>Rahul DK</h4>
                                         <div class="specialization">
                                             <strong>Student Ambassador</strong>
                                         </div>
@@ -124,7 +113,7 @@
 
                                 <div class="tech-guru-card">
                                     <div class="guru-image">
-                                        <i class="fas fa-user-tie"></i>
+                                        <img src="assets/shivani.jpg" alt="Shivani Venkatesan" class="coordinator-photo" />
                                     </div>
                                     <div class="guru-info">
                                         <h4>Shivani Venkatesan</h4>
@@ -138,7 +127,7 @@
                      
                                 <div class="tech-guru-card center-card">
                                     <div class="guru-image">
-                                        <i class="fas fa-user-tie"></i>
+                                        <img src="assets/jitendra.jpg" alt="Jitendra" class="coordinator-photo" />
                                     </div>
                                     <div class="guru-info">
                                         <h4>Jitendra</h4>
