Changes in co ordinators

--- a/coordinators.html
+++ b/coordinators.html
@@ -51,7 +51,7 @@
                                     </div>
                                     <div class="coordinator-info">
                                         <h3>Dr. Chandra Sekran</h3>
-                                        <p class="designation">Co-ordinator</p>
+                                        <p class="designation">Mentor</p>
                                         <p class="department">Director - Department of Mechanical engineering</p>
                                     </div>
                                 </div>
@@ -62,7 +62,7 @@
                                     </div>
                                     <div class="coordinator-info">
                                         <h3>Dr. Anandan R</h3>
-                                        <p class="designation">Coordinator</p>
+                                        <p class="designation">Co-ordinator</p>
                                         <p class="department">Department of Computer Science & Engineering</p>
                                     </div>
                                 </div>
@@ -74,7 +74,7 @@
                                         </div>
                                         <div class="coordinator-info">
                                             <h3>Dr. Muraliraja R</h3>
-                                            <p class="designation">Coordinator</p>
+                                            <p class="designation">Co Co-ordinator</p>
                                             <p class="department">Department of Mechanical engineering</p>
                                         </div>
                                     </div>
