--- a/tech-gurus.html
+++ b/tech-gurus.html
@@ -106,7 +106,8 @@
                                     <div class="guru-info">
                                         <h4>Rahul DK</h4>
                                         <div class="specialization">
-                                            <strong>Student Ambassador</strong>
+                                            <strong>Student Ambassador</strong><br/>
+                                            <strong>Department:</strong> Computer Science Engineering
                                         </div>
                                     </div>
                                 </div>
@@ -118,7 +119,8 @@
                                     <div class="guru-info">
                                         <h4>Shivani Venkatesan</h4>
                                         <div class="specialization">
-                                            <strong>Student Ambassador</strong>
+                                            <strong>Student Ambassador</strong><br/>
+                                            <strong>Department:</strong> BE BioMedical Engineering
                                         </div>
                                     </div>
                                 </div>
@@ -132,7 +134,8 @@
                                     <div class="guru-info">
                                         <h4>Jitendra</h4>
                                         <div class="specialization">
-                                            <strong>Student Ambassador</strong>
+                                            <strong>Student Ambassador</strong><br/>
+                                            <strong>Department:</strong> Computer Science Engineering
                                         </div>
                                     </div>
                                 </div>
