--- a/tech-gurus.html
+++ b/tech-gurus.html
@@ -46,24 +46,24 @@
                             <div class="tech-gurus-grid">
                                 <div class="tech-guru-card">
                                     <div class="guru-image">
-                                        <img src="assets/murali.jpg" alt="Dr. Muraliraja R" class="coordinator-photo" />
+                                        <img src="assets/baskar.jpg" alt="Dr. Muraliraja R" class="coordinator-photo" />
                                     </div>
                                     <div class="guru-info">
-                                        <h4>Dr. Muraliraja R</h4>
+                                        <h4>Baskar S</h4>
                                         <div class="specialization">
-                                            <strong>Department:</strong> Mechanical Engineering
+                                            <strong>Department:</strong> Automobile Engineering
                                         </div>
                                     </div>
                                 </div>
 
                                 <div class="tech-guru-card">
                                     <div class="guru-image">
-                                        <img src="assets/shai.jpg" alt="Dr. Shaisundaram VS" class="coordinator-photo" />
+                                        <img src="assets/padma.png" alt="Dr. Shaisundaram VS" class="coordinator-photo" />
                                     </div>
                                     <div class="guru-info">
-                                        <h4>Dr. Shaisundaram VS</h4>
+                                        <h4>Padma Ramu</h4>
                                         <div class="specialization">
-                                            <strong>Department:</strong> Automobile Engineering
+                                            <strong>Department:</strong> Computer Science and Information Technology
                                         </div>
                                     </div>
                                 </div>
@@ -91,6 +91,19 @@
                                         </div>
                                     </div>
                                 </div>
+
+                                <div class="tech-guru-card center-card">
+                                    <div class="guru-image">
+                                        <img src="assets/shai.jpg" alt="Dr. Vinod Kumar" class="coordinator-photo" />
+                                    </div>
+                                    <div class="guru-info">
+                                        <h4>Shaisundaram VS</h4>
+                                        <div class="specialization">
+                                            <strong>Department:</strong> Automobile Engineering
+                                        </div>
+                                    </div>
+                                </div>
+                                
                             </div>
                         </div>
 
