--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
                             <li><a href="index.html" class="sidebar-link">AICTE IDEA LAB - OBJECTIVE</a></li>
                             <li><a href="vision-mission.html" class="sidebar-link">Vision & Mission</a></li>
                             <li><a href="coordinators.html" class="sidebar-link">Coordinators</a></li>
-                            <li><a href="tech-gurus.html" class="sidebar-link">Faculty Coordinators & Student Ambassadors</a></li>
+                            <li><a href="tech-gurus.html" class="sidebar-link">Tech Gurus & Student Ambassadors</a></li>
                             <li><a href="major-equipment.html" class="sidebar-link">Major Equipment</a></li>
                             <li><a href="events.html" class="sidebar-link">Events</a></li>
                             <li><a href="gallery.html" class="sidebar-link">Gallery</a></li>
