--- a/tech-gurus.html
+++ b/tech-gurus.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Faculty Coordinators & Student Ambassadors - AICTE IDEA LAB</title>
+    <title>Tech Gurus & Student Ambassadors - AICTE IDEA LAB</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -23,7 +23,7 @@
                             <li><a href="index.html" class="sidebar-link">AICTE IDEA LAB - OBJECTIVE</a></li>
                             <li><a href="vision-mission.html" class="sidebar-link">Vision & Mission</a></li>
                             <li><a href="coordinators.html" class="sidebar-link">Coordinators</a></li>
-                            <li><a href="tech-gurus.html" class="sidebar-link active">Faculty Coordinators & Student Ambassadors</a></li>
+                            <li><a href="tech-gurus.html" class="sidebar-link active">Tech Gurus & Student Ambassadors</a></li>
                             <li><a href="members.html" class="sidebar-link">Student Members</a></li>
                             <li><a class="sidebar-link">Major Equipment</a></li>
                             <li><a href="events.html" class="sidebar-link">Events</a></li>
@@ -35,12 +35,12 @@
                 <section class="content-area">
                     <div class="page-header">
                         <h1>AICTE IDEA LAB</h1>
-                        <h2>FACULTY COORDINATORS & STUDENT AMBASSADORS</h2>
+                        <h2>TECH GURUS & STUDENT AMBASSADORS</h2>
                     </div>
 
                     <div class="content-section">
                         <div class="tech-gurus-section">
-                            <h3>Faculty Coordinators & Student Ambassadors</h3>
+                            <h3>Tech Gurus & Student Ambassadors</h3>
                             <p class="section-description">Our Tech Gurus are experienced professionals and industry experts who provide mentorship, guidance, and technical expertise to students working on innovative projects.</p>
                             
                             <div class="tech-gurus-grid">
