--- a/tech-gurus.html
+++ b/tech-gurus.html
@@ -46,36 +46,37 @@
                             <div class="tech-gurus-grid">
                                 <div class="tech-guru-card">
                                     <div class="guru-image">
-                                        <img src="assets/baskar.jpg" alt="Dr. Muraliraja R" class="coordinator-photo" />
+                                        <img src="assets/vijaya.jpg" alt="Dr. Muraliraja R" class="coordinator-photo" />
                                     </div>
                                     <div class="guru-info">
-                                        <h4>Baskar S</h4>
+                                        <h4>Dr. Vijayalakshmi P</h4>
                                         <div class="specialization">
-                                            <strong>Department:</strong> Automobile Engineering
+                                            <strong>Department:</strong> Electronics and Communication Engineering
                                         </div>
                                     </div>
                                 </div>
 
                                 <div class="tech-guru-card">
                                     <div class="guru-image">
-                                        <img src="assets/padma.png" alt="Dr. Shaisundaram VS" class="coordinator-photo" />
+                                        <img src="assets/sowmiya.jpg" alt="Dr. Shaisundaram VS" class="coordinator-photo" />
                                     </div>
                                     <div class="guru-info">
-                                        <h4>Padma Ramu</h4>
+                                        <h4>Ms. S.M. Sowmiya</h4>
                                         <div class="specialization">
-                                            <strong>Department:</strong> Computer Science and Information Technology
+                                            <strong>Department:</strong> Artificial Intelligence & Machine Learning
                                         </div>
                                     </div>
                                 </div>
 
                                 <div class="tech-guru-card">
                                     <div class="guru-image">
-                                        <img src="assets/sharmilaa.jpg" alt="Dr. Sharmilaa Ganesan" class="coordinator-photo" />
+                                        <img src="assets/sushita.jpg" alt="Dr. Sharmilaa Ganesan" class="coordinator-photo" />
                                     </div>
                                     <div class="guru-info">
-                                        <h4>Dr. Sharmilaa Ganesan</h4>
+                                        <h4>Dr. Sushita. K</h4>
                                         <div class="specialization">
-                                            <strong>Department:</strong> Civil Engineering
+                                            <strong>Department:</strong> Electrical and Electronics Engineering
+
                                         </div>
                                     </div>
                                 </div>
@@ -85,21 +86,57 @@
                                         <img src="assets/vinod.jpg" alt="Dr. Vinod Kumar" class="coordinator-photo" />
                                     </div>
                                     <div class="guru-info">
-                                        <h4>Dr. Vinod Kumar</h4>
+                                        <h4>Dr. Vinod Kumar. T</h4>
                                         <div class="specialization">
                                             <strong>Department:</strong> Mechanical Engineering
                                         </div>
                                     </div>
                                 </div>
 
-                                <div class="tech-guru-card center-card">
+                                <div class="tech-guru-card">
+                                    <div class="guru-image">
+                                        <img src="assets/baskar.jpg" alt="Dr. Vinod Kumar" class="coordinator-photo" />
+                                    </div>
+                                    <div class="guru-info">
+                                        <h4>Dr. Baskar. S</h4>
+                                        <div class="specialization">
+                                            <strong>Department:</strong> Automobile Engineering
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="tech-guru-card">
                                     <div class="guru-image">
                                         <img src="assets/shai.jpg" alt="Dr. Vinod Kumar" class="coordinator-photo" />
                                     </div>
                                     <div class="guru-info">
-                                        <h4>Shaisundaram VS</h4>
+                                        <h4>Dr. Shai Sundaram.V.S</h4>
                                         <div class="specialization">
                                             <strong>Department:</strong> Automobile Engineering
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="tech-guru-card">
+                                    <div class="guru-image">
+                                        <img src="assets/padma.png" alt="Dr. Vinod Kumar" class="coordinator-photo" />
+                                    </div>
+                                    <div class="guru-info">
+                                        <h4>Dr. Padma.E</h4>
+                                        <div class="specialization">
+                                            <strong>Department:</strong> Data Science & Information Technology
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="tech-guru-card">
+                                    <div class="guru-image">
+                                        <img src="assets/sharmilaa.jpg" alt="Dr. Vinod Kumar" class="coordinator-photo" />
+                                    </div>
+                                    <div class="guru-info">
+                                        <h4>Dr. Sharmilaa. G</h4>
+                                        <div class="specialization">
+                                            <strong>Department:</strong> Civil Engineering
                                         </div>
                                     </div>
                                 </div>
